@@ -6,14 +6,32 @@ struct FeatureHighlightStore {
         static let followConversationTooltipCounterKey = "follow-conversation-tooltip-counter"
     }
 
-    @UserDefault(Keys.didUserDismissTooltipKey, defaultValue: true)
-    static var didDismissTooltip: Bool
+    private let userDefaults: UserDefaults
 
-    @UserDefault(Keys.followConversationTooltipCounterKey, defaultValue: 0)
-    static var followConversationTooltipCounter: Int
+    init(userDefaults: UserDefaults = UserDefaults.standard) {
+        self.userDefaults = userDefaults
+    }
+
+    var didDismissTooltip: Bool {
+        get {
+            return userDefaults.bool(forKey: Keys.didUserDismissTooltipKey)
+        }
+        set {
+            userDefaults.set(newValue, forKey: Keys.didUserDismissTooltipKey)
+        }
+    }
+
+    var followConversationTooltipCounter: Int {
+        get {
+            return userDefaults.integer(forKey: Keys.followConversationTooltipCounterKey)
+        }
+        set {
+            userDefaults.set(newValue, forKey: Keys.followConversationTooltipCounterKey)
+        }
+    }
 
     /// Tooltip will only be shown 3 times if the user never interacts with it.
-    static var shouldShowTooltip: Bool {
-        followConversationTooltipCounter < 3 || !didDismissTooltip
+    var shouldShowTooltip: Bool {
+        followConversationTooltipCounter < 3 && !didDismissTooltip
     }
 }
